--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,9 +1,6 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
+    
 
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nom </th>
@@ -28,11 +25,11 @@
     <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn" (click)="deleteStudent(element)">
-                X
+            <button class="btn" (click)="deleteStudent(element)">
+                <i class="material-icons">delete</i>
             </button>
-            <button mat-icon-button color="primary" (click)="goToEdit(element)">
-                E
+            <button class="btn" (click)="goToEdit(element)">
+                <i class="material-icons">edit</i>
             </button>
         </td>
     </ng-container>
@@ -40,3 +37,9 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+
+<!--<ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>-->
