--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -25,7 +25,7 @@
     <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-            <button class="btn" (click)="deleteStudent(element)">
+            <button class="btn" (click)="openDialog('150ms', '150ms', element)">
                 <i class="material-icons">delete</i>
             </button>
             <button class="btn" (click)="goToEdit(element)">
