--- a/src/app/table/dialog.component.html
+++ b/src/app/table/dialog.component.html
@@ -1,7 +1,7 @@
-<h2 mat-dialog-title>Suppression d'étudiant</h2>
+<h2 mat-dialog-title>{{data.title}}</h2>
 <mat-dialog-content>
-    La suppression est définitive<br>
-    Voulez vous continuer ?
+    {{data.message}}<br>
+    Voulez-vous continuer ?
 </mat-dialog-content>
 <mat-dialog-actions >
   <button mat-button mat-dialog-close cdkFocusInitial>Non</button>
