--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -22,13 +22,13 @@
         <td mat-cell *matCellDef="let element"> {{element.address}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="delete">
+    <ng-container *ngIf="isAdmin" matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-            <button class="btn" (click)="openDialog('150ms', '150ms', element)">
+            <button class="btn" (click)="openDialog('150ms', '150ms', element, diagMessages.DELETE)">
                 <i class="material-icons">delete</i>
             </button>
-            <button class="btn" (click)="goToEdit(element)">
+            <button class="btn" (click)="openDialog('150ms', '150ms', element, diagMessages.EDIT_STUDENT)">
                 <i class="material-icons">edit</i>
             </button>
         </td>
@@ -38,8 +38,3 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-
-<!--<ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>-->
