--- a/src/app/register-connexion/register-connexion.component.html
+++ b/src/app/register-connexion/register-connexion.component.html
@@ -17,7 +17,7 @@
         <!-- Champ mot de passe -->
         <div class="form-group">
           <label for="password">Mot de passe</label>
-          <input type="text" formControlName="password" id="password"
+          <input type="password" formControlName="password" id="password"
                 required
                 name="password"
                 placeholder="Ex. **********">
