--- a/src/app/table/dialog.component.html
+++ b/src/app/table/dialog.component.html
@@ -1,9 +1,11 @@
-<h2 mat-dialog-title>{{data.title}}</h2>
-<mat-dialog-content>
-    {{data.message}}<br>
-    Voulez-vous continuer ?
-</mat-dialog-content>
-<mat-dialog-actions >
-  <button mat-button mat-dialog-close cdkFocusInitial>Non</button>
-  <button mat-button mat-dialog-close (click)="onYesClick()">Oui</button>
-</mat-dialog-actions>
+<div class="dialog-container">
+  <h2 mat-dialog-title>{{data.title}}</h2>
+  <mat-dialog-content>
+      <p>{{data.message}}</p>
+      <p>Voulez-vous continuer ?</p>
+  </mat-dialog-content>
+  <mat-dialog-actions >
+    <button mat-button mat-dialog-close cdkFocusInitial>Non</button>
+    <button mat-button mat-dialog-close (click)="onYesClick()">Oui</button>
+  </mat-dialog-actions>
+</div>
